tests/NormalTests/paczka1/fuzzy1/81391360.err
Error in line 12: zICujWT S460 134,42
Error in line 13: NW3K A657 14,9
Error in line 27: mYf1g37 S460 33,4
Error in line 28: mYf1g37 A343 30,1
